--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@ h1 {
     display: inline-block;
     background-color: #eee;
     border-radius: 4px;
+    margin-right: 10px;
   }
   nav a:visited, a:link {
     color: #334953;
