--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -19,6 +19,7 @@ label {
     padding: 5px 10px;
     border-radius: 4px;
     cursor: pointer;
+    margin-right: 10px;
   }
   button:hover {
     background-color: #cfd8dc;
